# test-synthesizer-sox-nix

./: CHANGELOG.md  Main.hs  base.nix  package.yaml  readme.md  release.nix  shell.nix  test-synthesizer-sox-nix.cabal
