cabal-version:       2.4
-- Initial package description 'test-synthesizer-sox-nix.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                test-synthesizer-sox-nix
version:             0.1.0.0
synopsis:            Just testing synthesizer-core and nix
-- description:
-- bug-reports:
license:             GPL-3.0-only
license-file:        LICENSE
author:              Thales Macedo Garitezi
-- maintainer:
-- copyright:
category:            Sound
extra-source-files:  CHANGELOG.md

executable test-synthesizer-sox-nix
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                       , synthesizer-core
  -- hs-source-dirs:
  default-language:    Haskell2010
  extra-libraries:
